tests/fixtures/invalid/max_none_bytes.py
# Cannot call max() with None, Bytes
x = max(None, b"hello")
